# slr

./: README.md  pyproject.toml
.streamlit/: config.toml
slr/: 0_🏠_Home.py
slr/data/histories/: histories.csv
slr/lib/: inference.py
slr/libs/: __init__.py  extract_frames.py  inference.py  processor.py  seq_scripts.py  slr_network_multi.py
slr/libs/utils/: __init__.py
slr/pages/: 1_📊_Recognize.py  2_🔢_History.py
