[tool.poetry]
name = "slr"
version = "0.1.0"
description = ""
authors = ["Muhammad Naufal <falkia34@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "1.37.1"
numpy = "^1.20.3"
pandas = "^1.3.4"
PyYAML = "^6.0"
torch = {version = "^1.13.0+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.14.0", source = "pytorch_cpu"}
torchaudio = {version = "^0.13.0", source = "pytorch_cpu"}
streamlit-navigation-bar = "^3.3.0"
opencv-python = "^4.5.5.64"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
